<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"


    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >
        <LinearLayout
            android:background="@color/primary_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <LinearLayout
        android:layout_marginTop="@dimen/marginTopBase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombreArtista"
            android:textSize="@dimen/tamanioLetra"
            android:layout_weight="3"
            android:textAlignment="center"
            android:textColor="@color/primary_text"
        ></TextView>
        <EditText
            android:layout_weight="1"
            android:id="@+id/nombreTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            ></EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fecha"
        android:textSize="@dimen/tamanioLetra"
        android:textAlignment="center"
        android:layout_weight="3"
            android:textColor="@color/primary_text"

        ></TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/calendarioTxt"
        android:inputType="date"
        android:focusable="false"
        android:clickable="true"
        android:maxLines="1"
        android:layout_weight="1"
        ></EditText>
    </LinearLayout>

        <LinearLayout
            android:background="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/marginTopBase">
            <TextView
                android:textColor="@color/icons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/generoMusical"
                android:textSize="@dimen/tamanioLetra"
                android:textAlignment="center"
                android:layout_weight="1"
                ></TextView>
            <Spinner
                android:id="@+id/idSpinnerGenero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                ></Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTopBase"
            android:orientation="horizontal">

            <TextView
                android:textColor="@color/primary_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ValorEntradatxt"
                android:textSize="@dimen/tamanioLetra"
                android:textAlignment="center"
                android:layout_weight="2"
                android:layout_marginLeft="10dp"
                ></TextView>
            <EditText
                android:id="@+id/valorEntradaTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                ></EditText>
        </LinearLayout>

            <LinearLayout
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/marginTopBase"
                ><TextView
                android:textColor="@color/icons"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calificaciontxt"
                android:textAlignment="center"
                android:textSize="@dimen/tamanioLetra"
                ></TextView>
                <Spinner
                    android:id="@+id/spinnerCalificacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"

                    ></Spinner>
            </LinearLayout>


            <Button
                android:id="@+id/registrarBtn"
                android:background="@color/divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTopBase"
                android:text="@string/registrarTxt"
                android:textSize="@dimen/tamanioLetra"
                android:textColor="@color/primary_text"></Button>

            <ListView
                android:background="@color/icons"
                android:id="@+id/eventosLv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:nestedScrollingEnabled="true"

                />
        </LinearLayout>

    </ScrollView>



</LinearLayout>